tests/docs/readme/expected
1/1: Building README (README.md)
LOG applicative-do.debug:0: adoExpr: ?postpone >>= (\x => ?postpone >>= (\y => pure (x, y)))
LOG applicative-do.debug:0: adoExpr: a >>= (\x => f x >>= (\y => b >>= (\z => pure (g y z))))
Error: While processing right hand side of pair. Sorry, I can't find any elaboration which works. All errors:
Possible error:
    Error during reflection: README.postpone is already defined.

    README:17:8--17:9
     13 | ```idris
     14 | pair : Applicative f => a -> b -> f (a, b)
     15 | pair a b = ado $ do
     16 |   x <- a
     17 |   y <- b
                 ^

Possible error:
    When unifying:
        ?a -> Elab ?a
    and:
        Elab ?scriptTy
    Mismatch between: ?a -> Elab ?a and Elab ?scriptTy.

    README:15:12--15:15
     11 | ## `do`-syntax for `Applicative` and `Functor`
     12 | 
     13 | ```idris
     14 | pair : Applicative f => a -> b -> f (a, b)
     15 | pair a b = ado $ do
                     ^^^

Error: While processing right hand side of opt. Sorry, I can't find any elaboration which works. All errors:
Possible error:
    Error during reflection: README.__con is already defined.

    README:30:3--30:11
     26 |       (a -> m $ c a) -> (forall a. c a -> b -> d) ->
     27 |       m a -> m b -> m d
     28 | opt f g a b = ado $ do
     29 |   x <- a
     30 |   y <- f x
            ^^^^^^^^

Possible error:
    When unifying:
        ?a -> Elab ?a
    and:
        Elab ?scriptTy
    Mismatch between: ?a -> Elab ?a and Elab ?scriptTy.

    README:28:15--28:18
     24 | opt : Monad m =>
     25 |       {0 c : _ -> _} ->
     26 |       (a -> m $ c a) -> (forall a. c a -> b -> d) ->
     27 |       m a -> m b -> m d
     28 | opt f g a b = ado $ do
                        ^^^

